--- a/zd_poc.html
+++ b/zd_poc.html
@@ -13,7 +13,7 @@
                         apiKey: "ak-MjQzMzQ2Nzk1OXwxNzU2Njc4MTE5ODI4fHRpLVRXVnVkR0YyYVNCSVpXRnNkR2d0VDNCbGJpQlNaV2RwYzNSeVlYUnBiMjR0VUhKdlptVnpjMmx2Ym1Gc3wxfDEwMDM4NDI4NSAg",
                         apiUrl: "https://embed-api.airia.ai",
                         greeting: "Hello! How can I assist you today?",
-                        imagePath: "https://matomo.mentavi.com/misc/user/logo-header.png?matomo",
+                        imagePath: "https://matomo.mentavi.com/misc/user/logo-header.png",
                         imageSize: "small",
                         imageBgColor: "#FFFFFF"})
     </script>
