--- a/zd_poc.html
+++ b/zd_poc.html
@@ -3,6 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+/* never allow horizontal scroll */
+html, body { width:100%; overflow-x:hidden; }
+
+/* if you use a wrapper, keep it fluid */
+.chat-window, #airia-embed, #airia-container {
+  box-sizing: border-box;
+  width: 100%;
+  max-width: 100%;
+}
+
+/* phone-specific clamps for injected widgets */
+@media (max-width: 480px) {
+  /* anything clearly from Airia */
+  iframe[src*="airia.ai"],
+  [id*="airia"], [class*="airia"] {
+    box-sizing: border-box !important;
+    width: 100% !important;
+    max-width: 100vw !important;
+  }
+  /* common pattern: fixed bottom-right panel */
+  *[style*="position: fixed"][style*="bottom"][style*="right"] {
+    box-sizing: border-box !important;
+    width: min(380px, 100vw - 16px) !important;
+    max-width: 100vw !important;
+    right: 8px !important; left: auto !important;
+    border-radius: 12px; /* optional nicety */
+  }
+  /* long words/URLs shouldn’t widen bubbles */
+  .chat-window, .chat-window * { overflow-wrap: anywhere; word-break: break-word; }
+}
+</style>
     <title>Airia Embed</title>
   </head>
   <body>
@@ -12,10 +44,25 @@
         AiriaChat.init({pipelineId: "8e803d5a-4996-4dfc-b4eb-cf79430fcaeb",
                         apiKey: "ak-MjQzMzQ2Nzk1OXwxNzU2Njc4MTE5ODI4fHRpLVRXVnVkR0YyYVNCSVpXRnNkR2d0VDNCbGJpQlNaV2RwYzNSeVlYUnBiMjR0VUhKdlptVnpjMmx2Ym1Gc3wxfDEwMDM4NDI4NSAg",
                         apiUrl: "https://embed-api.airia.ai",
-                        greeting: "Hello! How can I assist you today?",
+                        greeting: "Hi there. Welcome to the TESTING ONLY Mentavi Health support bot. How can I assist you today?",
                         imagePath: "images/logo-header.png",
                         imageSize: "small",
                         imageBgColor: "#FFFFFF"})
+                        
     </script>
+    <script>
+        (function clampAiria() {
+          const clamp = () => {
+            document.querySelectorAll('iframe[src*="airia.ai"], [id*="airia"], [class*="airia"]').forEach(el => {
+              el.style.boxSizing = 'border-box';
+              el.style.maxWidth  = '100vw';
+              el.style.width     = '100%';
+            });
+          };
+          // run soon, and again after dynamic mounts
+          clamp();
+          new MutationObserver(clamp).observe(document.documentElement, { childList: true, subtree: true });
+        })();
+        </script>
   </body>
 </html>
