--- a/zd_poc.html
+++ b/zd_poc.html
@@ -2,30 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <style>
-    html, body { width:100%; overflow-x:hidden; }  /* hard stop on sideways scroll */
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+/* No horizontal page scroll */
+html, body { width: 100%; overflow-x: hidden; }
 
-    @media (max-width: 480px) {
-      /* Common Airia markers + any fixed bottom-right panel */
-      iframe[src*="airia.ai"],
-      [id*="airia"], [class*="airia"] {
-        box-sizing: border-box !important;
-        width: 100% !important;
-        max-width: 100vw !important;
-      }
-      /* last-resort guard for fixed chat panels */
-      *[style*="position: fixed"][style*="bottom"][style*="right"] {
-        box-sizing: border-box !important;
-        width: min(380px, 100vw - 16px) !important;
-        max-width: 100vw !important;
-        right: 8px !important; left: auto !important;
-        border-radius: 12px;
-      }
-    }
-    </style>
+/* Let normal content be fluid */
+.chat-window { box-sizing: border-box; width: 100%; max-width: 100%; }
 
-    <title>Airia Embed</title>
+/* Mobile: keep any Airia/“chat” elements inside the viewport */
+@media (max-width: 480px) {
+  iframe[src*="airia.ai"],
+  [id*="airia"], [class*="airia"] {
+    box-sizing: border-box !important;
+    max-width: 100vw !important;    /* cap only */
+    /* no width here; avoid stretching fixed panels full-width */
+  }
+
+  /* Generic guard for fixed bottom-right panels */
+  * {
+    /* long strings shouldn't force width */
+    word-break: break-word;
+    overflow-wrap: anywhere;
+  }
+}
+</style>
+    <title>Airia ZD POC</title>
   </head>
   <body>
     <div id="root"></div>
@@ -40,47 +42,37 @@
                         imageBgColor: "#FFFFFF"})
                         
     </script>
-  <script>
+<script>
 (function () {
-  const applyClamp = (root = document) => {
+  const clampOnce = (root = document) => {
+    // Cap obvious Airia elems
     const sel = 'iframe[src*="airia.ai"], [id*="airia"], [class*="airia"]';
     root.querySelectorAll(sel).forEach(el => {
+      const cs = getComputedStyle(el);
       el.style.boxSizing = 'border-box';
       el.style.maxWidth  = '100vw';
-      el.style.width     = '100%';
-      // If this is a fixed panel, keep it inside on phones
-      const cs = getComputedStyle(el);
-      if (cs.position === 'fixed' && /auto|^$/.test(cs.left) && cs.right !== 'auto') {
-        el.style.right = '8px';
-        el.style.left  = 'auto';
-        el.style.maxWidth = 'calc(100vw - 16px)';
-      }
-    });
 
-    // also clamp any fixed bottom-right elements (generic safety)
-    root.querySelectorAll('*').forEach(el => {
-      const cs = getComputedStyle(el);
+      // If it's fixed in the corner, anchor to the right and don't force full width
       if (cs.position === 'fixed' && cs.bottom !== 'auto' && cs.right !== 'auto') {
-        el.style.boxSizing = 'border-box';
-        el.style.maxWidth = '100vw';
-        el.style.width = 'min(380px, 100vw - 16px)';
-        el.style.right = '8px';
-        el.style.left = 'auto';
+        el.style.right     = '8px';
+        el.style.left      = 'auto';
+        el.style.maxWidth  = 'calc(100vw - 16px)'; // gutter
+        // DO NOT set el.style.width here (prevents the "too far left" look)
       }
     });
 
-    // walk open shadow roots (many widgets use Shadow DOM)
+    // Walk open shadow roots (some widgets use Shadow DOM)
     root.querySelectorAll('*').forEach(el => {
-      if (el.shadowRoot) applyClamp(el.shadowRoot);
+      if (el.shadowRoot) clampOnce(el.shadowRoot);
     });
   };
 
-  // run now, after next frame, and watch for dynamic mounts
-  applyClamp();
-  requestAnimationFrame(applyClamp);
-  new MutationObserver(() => applyClamp()).observe(document.documentElement, { childList: true, subtree: true });
+  // Run now, on next frame (corrected rAF), and on DOM changes
+  clampOnce();
+  requestAnimationFrame(() => clampOnce());
+  new MutationObserver(() => clampOnce())
+    .observe(document.documentElement, { childList: true, subtree: true });
 })();
 </script>
-
   </body>
 </html>
